# FCNCDecays

./: Bstophill.cpp  BtoKll_bhp.cpp  BtoKll_bkms.cpp  Btoll.cpp  CMakeLists.txt  FCNC_Error.nb  README.md  amp.cc  amp.h  fffun.cc  fffun.h  ffpar.cc  ffpar.h  fullcode.cpp  main.cc  obs.cc  obs.h  smpar.cc  smpar.h  test.cpp  test2.cpp
error/: FCNC_Error.nb  sample.cc
include/: FF_functions.h  FF_functions_mc.h  FF_parameters.h  FF_parameters_mc.h  SM_parameters.h  SM_parameters_mc.h  amp.h  amperr.h  amplitudes.h  amplitudes_mc.h  ckm_elements.h  ckm_elements_mc.h  fferrfun.h  fferrpar.h  fffun.h  ffpar.h  get_mc_observable.h  get_mcplot.h  get_observable.h  model_functions.h  myfun.h  obs.h  obserr.h  obserrDF.h  observables.h  observables_binavg.h  observables_mc.h  ref_fun.h  smpar.h  smpar_mc.h
main/: main.cc  sample_covariance.cc  sample_flavioerr.cc  sample_flavioobs.cc  sample_flavioplot.cc  sample_jarvis.cc  sample_mcerror.cc  sample_obsavg.cc  sample_observable.cc  sample_q2plot.cc  tmain.cc
src/: FF_functions.cc  FF_functions_mc.cc  FF_parameters.cc  FF_parameters_mc.cc  SM_parameters.cc  SM_parameters_mc.cc  amp.cc  amperr.cc  amplitudes.cc  amplitudes_mc.cc  ckm_elements.cc  ckm_elements_mc.cc  fferrfun.cc  fferrpar.cc  fffun.cc  ffpar.cc  get_mc_observable.cc  get_mcplot.cc  get_observable.cc  model_functions.cc  myfun.cc  obs.cc  obserr.cc  obserrDF.cc  observables.cc  observables_binavg.cc  observables_mc.cc  ref_fun.cc  smpar.cc
